[package]
name = "simple-ca"
version = "0.1.0"
authors = ["Grerlrr <grerlrr@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
clap = "2.33"
dirs = "2.0"

[profile.release]
lto = true
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
