[package]
name = "simple-ca"
version = "0.2.0"
authors = ["Grerlrr <grerlrr@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.1"
dirs = "4.0"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
toml = "0.5"

[profile.release]
lto = true
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
